<resources>
    <!-- Facebook ID -->
    <string name="facebook_app_id">1759637414326452</string>

    <string name="app_name">Superafit</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="password_confirmation">Confirme a senha</string>
    <string name="wod">Treino</string>
    <string name="schedules">Horários</string>
    <string name="messages">Comunicados</string>
    <string name="signup">Cadastre-se</string>
    <string name="ok">Ok</string>
    <string name="processing">Processando</string>
    <string name="login">Login</string>
    <string name="back">voltar</string>
    <string name="items">Exercícios</string>
    <string name="create_your_user">Crie seu usuário</string>
    <string name="loading">Carregando...</string>
    <string name="tentar_novamente">Tentar novamente</string>

    <string name="msg_invalid_email_login">Login inválido ou não informado. Informe um email válido.</string>
    <string name="msg_required_password">A senha deve ser informada com 6 caracteres.</string>
    <string name="msg_passwords_are_difrent">As senhas informadas são diferentes.</string>
    <string name="msg_required_confirm_password">A confirmação de senha deve ser informada com 6 caracteres.</string>
    <string name="msg_invalid_login">Usuário ou senha informados não conferem.</string>
    <string name="msg_no_internet_connection">Verifique sua conexão com a internet e tente novamente.</string>
    <string name="msg_signup_generic_error">Ocorreu um erro ao criar o usuário. Por favor tente mais tarde.</string>
    <string name="msg_load_information_error">Não foi possível recuperar as informações.\nVerifique sua conexão com a internet.\nCaso o problema persista, tente mais tarde.</string>
    <string name="msg_schedule_not_found">Os horários ainda não foram publicados.</string>
    <string name="msg_wod_not_found">O treino de hoje ainda não foi publicado.</string>
    <string name="msg_service_unavailable">Serviço indisponível, tente mais tarde.</string>
    <string name="msg_remote_error">"Ocorreu um problema ao obter as informações!\nVerifique sua conexão com a internet e tente novamente."</string>

</resources>
