<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context="superafit.rar.com.br.superafit.ui.activity.SignupActivity"
        android:weightSum="1">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_your_user"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/signup_activity_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/signup_activity_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:maxLength="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_confirmation"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/signup_activity_edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:maxLength="6"/>

        <Button
            android:id="@+id/signup_activity_btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/black"
            android:text="@string/ok"
            android:textColor="@color/white"
            tools:textSize="18sp" />

        <Button
            android:id="@+id/signup_activity_btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black"
            android:text="@string/back"
            android:textColor="@android:color/background_light"
            tools:textSize="18sp" />

    </LinearLayout>
</ScrollView>
