<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="superafit.rar.com.br.superafit.ui.activity.LoginActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/login_activity_edit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/login_activity_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"

        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:maxLength="6"/>

    <Button
        android:id="@+id/login_activity_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/black"
        android:text="@string/ok"
        android:textColor="@color/white"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/login_activity_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:text="@string/signup"
        android:textColor="@android:color/background_light"
        tools:textSize="18sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

</LinearLayout>

